[package]
name = "mon3tr-widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"

spine = { path = "../spine" }
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
pollster = "0.2"
image = { version = "0.23", default-features = false, features = ["png"] }
wgpu = "0.11"
winit = { version = "0.25", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

zip = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.24", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
trayicon = { path = "../trayicon-rs", features = ["winit"] }

[build-dependencies]
vergen = "5"
